--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,6 @@ spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
 spring.flyway.validate-on-migrate=true
+
+app.scheduler.faturas-cron=0 0 0 1 * *
+app.batch.url=http://localhost:8080
