--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=banco
 
+server.port=8081
+
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
@@ -20,5 +22,5 @@ spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
 spring.flyway.validate-on-migrate=true
 
-app.scheduler.faturas-cron=0 0 0 1 * *
+app.scheduler.faturas-cron=*/10 * * * * *
 app.batch.url=http://localhost:8080
